--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,101 @@
-ipython==8.12.3
-joblib==1.4.2
-librosa==0.10.2.post1
-matplotlib==3.9.2
-numpy==2.1.1
-pandas==2.2.3
-Pillow==10.4.0
-scikit_learn==1.5.2
-soundfile==0.12.1
-torch==2.4.1
-tqdm==4.66.5
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+_libgcc_mutex=0.1=conda_forge
+_openmp_mutex=4.5=2_gnu
+asttokens=2.4.1=pyhd8ed1ab_0
+attrs=24.2.0=pypi_0
+backcall=0.2.0=pypi_0
+beautifulsoup4=4.12.3=pypi_0
+bleach=6.1.0=pypi_0
+bzip2=1.0.8=h4bc722e_7
+ca-certificates=2024.8.30=hbcca054_0
+certifi=2024.8.30=pypi_0
+charset-normalizer=3.3.2=pypi_0
+comm=0.2.2=pyhd8ed1ab_0
+debugpy=1.8.6=py312h2ec8cdc_0
+decorator=5.1.1=pyhd8ed1ab_0
+defusedxml=0.7.1=pypi_0
+docopt=0.6.2=pypi_0
+exceptiongroup=1.2.2=pyhd8ed1ab_0
+executing=2.1.0=pyhd8ed1ab_0
+fastjsonschema=2.20.0=pypi_0
+idna=3.10=pypi_0
+importlib-metadata=8.5.0=pyha770c72_0
+ipykernel=6.29.5=pyh3099207_0
+ipython=8.12.3=pypi_0
+jedi=0.19.1=pyhd8ed1ab_0
+jinja2=3.1.4=pypi_0
+jsonschema=4.23.0=pypi_0
+jsonschema-specifications=2023.12.1=pypi_0
+jupyter_client=8.6.3=pyhd8ed1ab_0
+jupyter_core=5.7.2=pyh31011fe_1
+jupyterlab-pygments=0.3.0=pypi_0
+keyutils=1.6.1=h166bdaf_0
+krb5=1.21.3=h659f571_0
+ld_impl_linux-64=2.43=h712a8e2_1
+libedit=3.1.20191231=he28a2e2_2
+libexpat=2.6.3=h5888daf_0
+libffi=3.4.2=h7f98852_5
+libgcc=14.1.0=h77fa898_1
+libgcc-ng=14.1.0=h69a702a_1
+libgomp=14.1.0=h77fa898_1
+libnsl=2.0.1=hd590300_0
+libsodium=1.0.20=h4ab18f5_0
+libsqlite=3.46.1=hadc24fc_0
+libstdcxx=14.1.0=hc0a3c3a_1
+libstdcxx-ng=14.1.0=h4852527_1
+libuuid=2.38.1=h0b41bf4_0
+libxcrypt=4.4.36=hd590300_1
+libzlib=1.3.1=hb9d3cd8_2
+llvmlite=0.43.0=pypi_0
+markupsafe=2.1.5=pypi_0
+matplotlib-inline=0.1.7=pyhd8ed1ab_0
+mistune=3.0.2=pypi_0
+nbclient=0.10.0=pypi_0
+nbconvert=7.16.4=pypi_0
+nbformat=5.10.4=pypi_0
+ncurses=6.5=he02047a_1
+nest-asyncio=1.6.0=pyhd8ed1ab_0
+numba=0.60.0=pypi_0
+numpy=2.0.2=pypi_0
+openssl=3.3.2=hb9d3cd8_0
+packaging=24.1=pyhd8ed1ab_0
+pandocfilters=1.5.1=pypi_0
+parso=0.8.4=pyhd8ed1ab_0
+pexpect=4.9.0=pyhd8ed1ab_0
+pickleshare=0.7.5=py_1003
+pip=24.2=pyh8b19718_1
+pipreqs=0.5.0=pypi_0
+platformdirs=4.3.6=pyhd8ed1ab_0
+prompt-toolkit=3.0.48=pyha770c72_0
+psutil=6.0.0=py312h66e93f0_1
+ptyprocess=0.7.0=pyhd3deb0d_0
+pure_eval=0.2.3=pyhd8ed1ab_0
+pygments=2.18.0=pyhd8ed1ab_0
+python=3.12.7=hc5c86c4_0_cpython
+python-dateutil=2.9.0=pyhd8ed1ab_0
+python_abi=3.12=5_cp312
+pyzmq=26.2.0=py312hbf22597_2
+readline=8.2=h8228510_1
+referencing=0.35.1=pypi_0
+requests=2.32.3=pypi_0
+rpds-py=0.20.0=pypi_0
+setuptools=75.1.0=pyhd8ed1ab_0
+six=1.16.0=pyh6c4a22f_0
+soupsieve=2.6=pypi_0
+stack_data=0.6.2=pyhd8ed1ab_0
+tinycss2=1.3.0=pypi_0
+tk=8.6.13=noxft_h4845f30_101
+tornado=6.4.1=py312h66e93f0_1
+traitlets=5.14.3=pyhd8ed1ab_0
+typing_extensions=4.12.2=pyha770c72_0
+tzdata=2024b=hc8b5060_0
+urllib3=2.2.3=pypi_0
+wcwidth=0.2.13=pyhd8ed1ab_0
+webencodings=0.5.1=pypi_0
+wheel=0.44.0=pyhd8ed1ab_0
+xz=5.2.6=h166bdaf_0
+yarg=0.1.9=pypi_0
+zeromq=4.3.5=ha4adb4c_5
+zipp=3.20.2=pyhd8ed1ab_0
