ADD callbacks, utils, conifigs

--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,25 @@
-[utils]
-seed = 0
+[callbacks]
+neptune_logger = 0
+neptune_project = ""
+neptune_api = ""
+model_checkpoint = 0
+# 'accuracy', 'loss'
+model_checkpoint_type = 'accuracy'
+model_checkpoint_verbose = 1 
+
+[paths]
+model_name = "model.pth"
+model_path = "models/"
+labeled_path = "data/train_audio"
+model_checkpoint_path = "models/model_checkpoint/checkpoint.pth"
+
+[trainer]
+seed= 0
+batch_size_train = 1024
+num_workers = 6
+
+[agent]
+starting_learning_rate = 0.01
+lr_min = 0.001
+lr_max_at_end = 0.005
+lr_decay_type = "warmupcosine"
