--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [callbacks]
 neptune_logger = 0
 neptune_project = ""
-neptune_api = ""
+neptune_token = ""
 model_checkpoint = 0
 # 'accuracy', 'loss'
 model_checkpoint_type = 'accuracy'
@@ -14,12 +14,12 @@ labeled_path = "data/train_audio"
 model_checkpoint_path = "models/model_checkpoint/checkpoint.pth"
 
 [trainer]
-seed= 0
+seed = 0
 batch_size_train = 1024
 num_workers = 6
 
 [agent]
+lr_decay_type = "warmupcosine"
 starting_learning_rate = 0.01
 lr_min = 0.001
 lr_max_at_end = 0.005
-lr_decay_type = "warmupcosine"
