--- a/environment.yml
+++ b/environment.yml
@@ -1,163 +1,162 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=conda_forge
-_openmp_mutex=4.5=2_gnu
-arrow=1.3.0=pypi_0
-asttokens=2.4.1=pyhd8ed1ab_0
-attrs=24.2.0=pypi_0
-audioread=3.0.1=pypi_0
-backcall=0.2.0=pypi_0
-beautifulsoup4=4.12.3=pypi_0
-bleach=6.1.0=pypi_0
-boto3=1.35.43=pypi_0
-botocore=1.35.43=pypi_0
-bravado=11.0.3=pypi_0
-bravado-core=6.1.1=pypi_0
-bzip2=1.0.8=h5eee18b_6
-ca-certificates=2024.9.24=h06a4308_0
-certifi=2024.8.30=pypi_0
-cffi=1.17.1=pypi_0
-charset-normalizer=3.3.2=pypi_0
-click=8.1.7=pypi_0
-comm=0.2.2=pyhd8ed1ab_0
-contourpy=1.3.0=pypi_0
-cycler=0.12.1=pypi_0
-debugpy=1.6.7=py312h6a678d5_0
-decorator=5.1.1=pyhd8ed1ab_0
-defusedxml=0.7.1=pypi_0
-docopt=0.6.2=pypi_0
-exceptiongroup=1.2.2=pyhd8ed1ab_0
-executing=2.1.0=pyhd8ed1ab_0
-expat=2.6.3=h6a678d5_0
-fastjsonschema=2.20.0=pypi_0
-filelock=3.13.1=pypi_0
-fonttools=4.54.1=pypi_0
-fqdn=1.5.1=pypi_0
-fsspec=2024.2.0=pypi_0
-future=1.0.0=pypi_0
-gitdb=4.0.11=pypi_0
-gitpython=3.1.43=pypi_0
-idna=3.10=pypi_0
-importlib-metadata=8.5.0=pyha770c72_0
-importlib-resources=6.4.5=pypi_0
-ipykernel=6.29.5=pyh3099207_0
-ipython=8.12.3=pypi_0
-isoduration=20.11.0=pypi_0
-jedi=0.19.1=pyhd8ed1ab_0
-jinja2=3.1.3=pypi_0
-jmespath=1.0.1=pypi_0
-joblib=1.4.2=pypi_0
-jsonpointer=3.0.0=pypi_0
-jsonref=1.1.0=pypi_0
-jsonschema=4.23.0=pypi_0
-jsonschema-specifications=2024.10.1=pypi_0
-jupyter_client=8.6.3=pyhd8ed1ab_0
-jupyter_core=5.7.2=pyh31011fe_1
-jupyterlab-pygments=0.3.0=pypi_0
-kaggle=1.6.17=pypi_0
-kiwisolver=1.4.7=pypi_0
-krb5=1.21.3=h143b758_0
-lazy-loader=0.4=pypi_0
-ld_impl_linux-64=2.40=h12ee557_0
-libedit=3.1.20230828=h5eee18b_0
-libffi=3.4.4=h6a678d5_1
-libgcc=14.1.0=h77fa898_1
-libgcc-ng=14.1.0=h69a702a_1
-libgomp=14.1.0=h77fa898_1
-librosa=0.10.2.post1=pypi_0
-libsodium=1.0.20=h4ab18f5_0
-libstdcxx=14.1.0=hc0a3c3a_1
-libstdcxx-ng=11.2.0=h1234567_1
-libuuid=1.41.5=h5eee18b_0
-llvmlite=0.43.0=pypi_0
-markupsafe=2.1.5=pypi_0
-matplotlib=3.9.2=pypi_0
-matplotlib-inline=0.1.7=pyhd8ed1ab_0
-mistune=3.0.2=pypi_0
-monotonic=1.6=pypi_0
-mpmath=1.3.0=pypi_0
-msgpack=1.1.0=pypi_0
-nbclient=0.10.0=pypi_0
-nbconvert=7.16.4=pypi_0
-nbformat=5.10.4=pypi_0
-ncurses=6.4=h6a678d5_0
-neptune=1.12.0=pypi_0
-neptune-pytorch=2.0.0=pypi_0
-nest-asyncio=1.6.0=pyhd8ed1ab_0
-networkx=3.2.1=pypi_0
-numba=0.60.0=pypi_0
-numpy=2.0.2=pypi_0
-oauthlib=3.2.2=pypi_0
-openssl=3.3.2=hb9d3cd8_0
-packaging=24.1=pyhd8ed1ab_0
-pandas=2.2.3=pypi_0
-pandocfilters=1.5.1=pypi_0
-parso=0.8.4=pyhd8ed1ab_0
-pexpect=4.9.0=pyhd8ed1ab_0
-pickleshare=0.7.5=py_1003
-pillow=10.4.0=pypi_0
-pip=24.2=py312h06a4308_0
-pipreqs=0.5.0=pypi_0
-platformdirs=4.3.6=pyhd8ed1ab_0
-pooch=1.8.2=pypi_0
-prompt-toolkit=3.0.48=pyha770c72_0
-psutil=5.9.0=py312h5eee18b_0
-ptyprocess=0.7.0=pyhd3deb0d_0
-pure_eval=0.2.3=pyhd8ed1ab_0
-pycparser=2.22=pypi_0
-pygments=2.18.0=pyhd8ed1ab_0
-pyjwt=2.9.0=pypi_0
-pyparsing=3.1.4=pypi_0
-python=3.12.6=h5148396_1
-python-dateutil=2.9.0=pyhd8ed1ab_0
-python-slugify=8.0.4=pypi_0
-pytz=2024.2=pypi_0
-pyyaml=6.0.2=pypi_0
-pyzmq=25.1.2=py312h6a678d5_0
-readline=8.2=h5eee18b_0
-referencing=0.35.1=pypi_0
-requests=2.32.3=pypi_0
-requests-oauthlib=2.0.0=pypi_0
-rfc3339-validator=0.1.4=pypi_0
-rfc3986-validator=0.1.1=pypi_0
-rpds-py=0.20.0=pypi_0
-s3transfer=0.10.3=pypi_0
-scikit-learn=1.5.2=pypi_0
-scipy=1.14.1=pypi_0
-setuptools=75.1.0=py312h06a4308_0
-simplejson=3.19.3=pypi_0
-six=1.16.0=pyh6c4a22f_0
-smmap=5.0.1=pypi_0
-soundfile=0.12.1=pypi_0
-soupsieve=2.6=pypi_0
-soxr=0.5.0.post1=pypi_0
-sqlite=3.45.3=h5eee18b_0
-stack_data=0.6.2=pyhd8ed1ab_0
-swagger-spec-validator=3.0.4=pypi_0
-sympy=1.12=pypi_0
-text-unidecode=1.3=pypi_0
-threadpoolctl=3.5.0=pypi_0
-tinycss2=1.4.0=pypi_0
-tk=8.6.14=h39e8969_0
-torch=2.4.1+cpu=pypi_0
-torchaudio=2.4.1+cpu=pypi_0
-torchvision=0.19.1+cpu=pypi_0
-tornado=6.4.1=py312h5eee18b_0
-tqdm=4.66.5=pypi_0
-traitlets=5.14.3=pyhd8ed1ab_0
-types-python-dateutil=2.9.0.20241003=pypi_0
-typing_extensions=4.12.2=pyha770c72_0
-tzdata=2024.2=pypi_0
-uri-template=1.3.0=pypi_0
-urllib3=2.2.3=pypi_0
-wcwidth=0.2.13=pyhd8ed1ab_0
-webcolors=24.8.0=pypi_0
-webencodings=0.5.1=pypi_0
-websocket-client=1.8.0=pypi_0
-wheel=0.44.0=py312h06a4308_0
-xz=5.4.6=h5eee18b_1
-yarg=0.1.9=pypi_0
-zeromq=4.3.5=ha4adb4c_5
-zipp=3.20.2=pyhd8ed1ab_0
-zlib=1.2.13=h5eee18b_1
+name: fasz
+dependencies:
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - arrow=1.3.0=pypi_0
+  - asttokens=2.4.1=pyhd8ed1ab_0
+  - attrs=24.2.0=pypi_0
+  - audioread=3.0.1=pypi_0
+  - backcall=0.2.0=pypi_0
+  - beautifulsoup4=4.12.3=pypi_0
+  - bleach=6.1.0=pypi_0
+  - boto3=1.35.43=pypi_0
+  - botocore=1.35.43=pypi_0
+  - bravado=11.0.3=pypi_0
+  - bravado-core=6.1.1=pypi_0
+  - bzip2=1.0.8=h5eee18b_6
+  - ca-certificates=2024.9.24=h06a4308_0
+  - certifi=2024.8.30=pypi_0
+  - cffi=1.17.1=pypi_0
+  - charset-normalizer=3.3.2=pypi_0
+  - click=8.1.7=pypi_0
+  - comm=0.2.2=pyhd8ed1ab_0
+  - contourpy=1.3.0=pypi_0
+  - cycler=0.12.1=pypi_0
+  - debugpy=1.6.7=py312h6a678d5_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pypi_0
+  - docopt=0.6.2=pypi_0
+  - exceptiongroup=1.2.2=pyhd8ed1ab_0
+  - executing=2.1.0=pyhd8ed1ab_0
+  - expat=2.6.3=h6a678d5_0
+  - fastjsonschema=2.20.0=pypi_0
+  - filelock=3.13.1=pypi_0
+  - fonttools=4.54.1=pypi_0
+  - fqdn=1.5.1=pypi_0
+  - fsspec=2024.2.0=pypi_0
+  - future=1.0.0=pypi_0
+  - gitdb=4.0.11=pypi_0
+  - gitpython=3.1.43=pypi_0
+  - idna=3.10=pypi_0
+  - importlib-metadata=8.5.0=pyha770c72_0
+  - importlib-resources=6.4.5=pypi_0
+  - ipykernel=6.29.5=pyh3099207_0
+  - ipython=8.12.3=pypi_0
+  - isoduration=20.11.0=pypi_0
+  - jedi=0.19.1=pyhd8ed1ab_0
+  - jinja2=3.1.3=pypi_0
+  - jmespath=1.0.1=pypi_0
+  - joblib=1.4.2=pypi_0
+  - jsonpointer=3.0.0=pypi_0
+  - jsonref=1.1.0=pypi_0
+  - jsonschema=4.23.0=pypi_0
+  - jsonschema-specifications=2024.10.1=pypi_0
+  - jupyter_client=8.6.3=pyhd8ed1ab_0
+  - jupyter_core=5.7.2=pyh31011fe_1
+  - jupyterlab-pygments=0.3.0=pypi_0
+  - kaggle=1.6.17=pypi_0
+  - kiwisolver=1.4.7=pypi_0
+  - krb5=1.21.3=h143b758_0
+  - lazy-loader=0.4=pypi_0
+  - ld_impl_linux-64=2.40=h12ee557_0
+  - libedit=3.1.20230828=h5eee18b_0
+  - libffi=3.4.4=h6a678d5_1
+  - libgcc=14.1.0=h77fa898_1
+  - libgcc-ng=14.1.0=h69a702a_1
+  - libgomp=14.1.0=h77fa898_1
+  - librosa=0.10.2.post1=pypi_0
+  - libsodium=1.0.20=h4ab18f5_0
+  - libstdcxx=14.1.0=hc0a3c3a_1
+  - libstdcxx-ng=11.2.0=h1234567_1
+  - libuuid=1.41.5=h5eee18b_0
+  - llvmlite=0.43.0=pypi_0
+  - markupsafe=2.1.5=pypi_0
+  - matplotlib=3.9.2=pypi_0
+  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
+  - mistune=3.0.2=pypi_0
+  - monotonic=1.6=pypi_0
+  - mpmath=1.3.0=pypi_0
+  - msgpack=1.1.0=pypi_0
+  - nbclient=0.10.0=pypi_0
+  - nbconvert=7.16.4=pypi_0
+  - nbformat=5.10.4=pypi_0
+  - ncurses=6.4=h6a678d5_0
+  - neptune=1.12.0=pypi_0
+  - neptune-pytorch=2.0.0=pypi_0
+  - nest-asyncio=1.6.0=pyhd8ed1ab_0
+  - networkx=3.2.1=pypi_0
+  - numba=0.60.0=pypi_0
+  - numpy=2.0.2=pypi_0
+  - oauthlib=3.2.2=pypi_0
+  - openssl=3.3.2=hb9d3cd8_0
+  - packaging=24.1=pyhd8ed1ab_0
+  - pandas=2.2.3=pypi_0
+  - pandocfilters=1.5.1=pypi_0
+  - parso=0.8.4=pyhd8ed1ab_0
+  - pexpect=4.9.0=pyhd8ed1ab_0
+  - pickleshare=0.7.5=py_1003
+  - pillow=10.4.0=pypi_0
+  - pip=24.2=py312h06a4308_0
+  - pipreqs=0.5.0=pypi_0
+  - platformdirs=4.3.6=pyhd8ed1ab_0
+  - pooch=1.8.2=pypi_0
+  - prompt-toolkit=3.0.48=pyha770c72_0
+  - psutil=5.9.0=py312h5eee18b_0
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.3=pyhd8ed1ab_0
+  - pycparser=2.22=pypi_0
+  - pygments=2.18.0=pyhd8ed1ab_0
+  - pyjwt=2.9.0=pypi_0
+  - pyparsing=3.1.4=pypi_0
+  - python=3.12.6=h5148396_1
+  - python-dateutil=2.9.0=pyhd8ed1ab_0
+  - python-slugify=8.0.4=pypi_0
+  - pytz=2024.2=pypi_0
+  - pyyaml=6.0.2=pypi_0
+  - pyzmq=25.1.2=py312h6a678d5_0
+  - readline=8.2=h5eee18b_0
+  - referencing=0.35.1=pypi_0
+  - requests=2.32.3=pypi_0
+  - requests-oauthlib=2.0.0=pypi_0
+  - rfc3339-validator=0.1.4=pypi_0
+  - rfc3986-validator=0.1.1=pypi_0
+  - rpds-py=0.20.0=pypi_0
+  - s3transfer=0.10.3=pypi_0
+  - scikit-learn=1.5.2=pypi_0
+  - scipy=1.14.1=pypi_0
+  - setuptools=75.1.0=py312h06a4308_0
+  - simplejson=3.19.3=pypi_0
+  - six=1.16.0=pyh6c4a22f_0
+  - smmap=5.0.1=pypi_0
+  - soundfile=0.12.1=pypi_0
+  - soupsieve=2.6=pypi_0
+  - soxr=0.5.0.post1=pypi_0
+  - sqlite=3.45.3=h5eee18b_0
+  - stack_data=0.6.2=pyhd8ed1ab_0
+  - swagger-spec-validator=3.0.4=pypi_0
+  - sympy=1.12=pypi_0
+  - text-unidecode=1.3=pypi_0
+  - threadpoolctl=3.5.0=pypi_0
+  - tinycss2=1.4.0=pypi_0
+  - tk=8.6.14=h39e8969_0
+  - torch=2.4.1+cpu=pypi_0
+  - torchaudio=2.4.1+cpu=pypi_0
+  - torchvision=0.19.1+cpu=pypi_0
+  - tornado=6.4.1=py312h5eee18b_0
+  - tqdm=4.66.5=pypi_0
+  - traitlets=5.14.3=pyhd8ed1ab_0
+  - types-python-dateutil=2.9.0.20241003=pypi_0
+  - typing_extensions=4.12.2=pyha770c72_0
+  - tzdata=2024.2=pypi_0
+  - uri-template=1.3.0=pypi_0
+  - urllib3=2.2.3=pypi_0
+  - wcwidth=0.2.13=pyhd8ed1ab_0
+  - webcolors=24.8.0=pypi_0
+  - webencodings=0.5.1=pypi_0
+  - websocket-client=1.8.0=pypi_0
+  - wheel=0.44.0=py312h06a4308_0
+  - xz=5.4.6=h5eee18b_1
+  - yarg=0.1.9=pypi_0
+  - zeromq=4.3.5=ha4adb4c_5
+  - zipp=3.20.2=pyhd8ed1ab_0
+  - zlib=1.2.13=h5eee18b_1
