--- a/config.ini
+++ b/config.ini
@@ -23,3 +23,7 @@ lr_decay_type = "warmupcosine"
 starting_learning_rate = 0.01
 lr_min = 0.001
 lr_max_at_end = 0.005
+
+[data]
+train_ratio = 0.8
+test_val_ratio = 0.5
