Making things pretty

--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,6 @@
+# We will use this config to make iterating the training much easier,
+# you can find all the relevant tunable parameters for the project 
+
 [callbacks]
 neptune_logger = 0
 neptune_project = "BirdClefHomework/csipcsirip"
@@ -24,16 +27,16 @@ n_epochs = 300
 [agent]
 lr_decay = 1 
 lr_decay_type = "exp" # lin, exp, cos, warmupcosine
-lr_start = 0.01
-lr_warmup_end = 0.001
-lr_end = 0.005
+lr_start = 0.0001
+lr_warmup_end = 0.01
+lr_end = 0.00005
 exp_gamma = 0.97
 lr_verbose = 12
 loss = "focal_loss" # cross_entropy, focal_loss
 optimizer = "adam" # sgd, adam, rmsprop
 
 [model]
-type = "mobilenet_v3_small"
+type = "mobilenet_v3_small" # A small model we already know, it's far from final
 transfer_learning = 0
 
 [data]
@@ -42,3 +45,4 @@ train_ratio = 0.8
 test_val_ratio = 0.5
 min_samples_in_class = 10
 shuffle = 1
+data_augmentation = 0
