--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-librosa==0.10.2.post1
+torch==2.4.1
 neptune==1.12.0
 neptune_pytorch==2.0.0
-numpy==2.1.2
-pandas==2.2.3
+librosa==0.10.2.post1
 scikit_learn==1.5.2
-torch==2.4.1+cpu
+pandas==2.2.3
+numpy==2.1.2
