--- a/config.ini
+++ b/config.ini
@@ -11,7 +11,7 @@ neptune_project = "BirdClefHomework/csipcsirip"
 neptune_token = ""
 model_checkpoint = 0
 model_checkpoint_type = 'accuracy' # 'accuracy', 'loss'
-model_checkpoint_verbose = 1 
+model_checkpoint_verbose = 0
 
 [paths]
 model_name = "model.pth"
@@ -25,8 +25,8 @@ seed = 42
 batch_size_train = 10
 batch_size_val = 10
 batch_size_test = 10
-num_workers = 16
-n_epochs = 20
+num_workers = 6
+n_epochs = 3
 
 [agent]
 lr_decay = 1 
@@ -35,13 +35,13 @@ lr_start = 0.01
 lr_warmup_end = 0.01
 lr_end = 0.00005
 exp_gamma = 0.97
-lr_verbose = 1
+lr_verbose = 0
 loss = "cross_entropy" # cross_entropy, focal_loss
 optimizer = "adam" # sgd, adam, rmsprop
 
 [model]
-type = "efficientnet_v2_m"
-transfer_learning = 0
+type = "mobilenet_v3_small" # mobilenet_v3_small, mobilenet_v3_large, efficientnet_v2_s, efficientnet_v2_m, efficientnet_v2_l - might not work, 
+transfer_learning = 1
 
 [data]
 hash_path = "processed_data/"
