--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-torch==2.4.1
+torch==2.5.1
+torchaudio
+torchmetrics
 torchvision
+librosa
+matplotlib
 neptune
 neptune_pytorch
-librosa
-scikit_learn
-matplotlib
 pandas
-Pillow
-kaggle
+scikit_learn
+tqdm
 numpy
