UPDT config, gitignore

--- a/config.ini
+++ b/config.ini
@@ -6,19 +6,20 @@ testing = 0
 data_samples_for_testing = 1000
 
 [callbacks]
-neptune_logger = 0
+neptune_logger = 1
 neptune_project = "BirdClefHomework/csipcsirip"
 neptune_token = ""
-model_checkpoint = 0
+model_checkpoint = 1
 model_checkpoint_type = 'accuracy' # 'accuracy', 'loss'
 model_checkpoint_verbose = 0
+remove_previous_checkpoint_at_start = 1
 
 [paths]
 model_name = "model.pth"
 model_path = "models/"
 labeled = "data/train_audio"
 metadata = "data/train_metadata.csv"
-model_checkpoint_path = "models/model_checkpoint/checkpoint.pth"
+model_checkpoint_path = "models/model_checkpoint/"
 
 [trainer]
 seed = 42
@@ -26,7 +27,7 @@ batch_size_train = 10
 batch_size_val = 10
 batch_size_test = 10
 num_workers = 6
-n_epochs = 3
+n_epochs = 1
 
 [agent]
 lr_decay = 1 
@@ -40,7 +41,7 @@ loss = "cross_entropy" # cross_entropy, focal_loss
 optimizer = "adam" # sgd, adam, rmsprop
 
 [model]
-type = "mobilenet_v3_small" # mobilenet_v3_small, mobilenet_v3_large, efficientnet_v2_s, efficientnet_v2_m, efficientnet_v2_l - might not work, 
+type = "efficientnet_v2_m" # mobilenet_v3_small, mobilenet_v3_large, efficientnet_v2_s, efficientnet_v2_m, efficientnet_v2_l - might not work, 
 transfer_learning = 1
 
 [data]
@@ -61,7 +62,7 @@ hop_length = 512
 max_length_s = 15
 f_max = 16000
 f_min = 20
-mode = 'single' # slice or single
+mode = 'slice' # slice or single
 
 [augmentation]
 data_augmentation = 1
