kernel size plusz adamw

--- a/config.ini
+++ b/config.ini
@@ -24,25 +24,25 @@ model_checkpoint_path = "models/model_checkpoint/"
 
 [trainer]
 seed = 42
-batch_size_train = 16
+batch_size_train = 8
 batch_size_val = 10
 batch_size_test = 10
 num_workers = 6
-n_epochs = 100
+n_epochs = 300
 
 [agent]
 lr_decay = 1 
-lr_decay_type = "cos" # lin, exp, cos, warmupcosine
+lr_decay_type = "exp" # lin, exp, cos, warmupcosine
 lr_start = 0.01
 lr_warmup_end = 0.01
 lr_end = 0.00005
-exp_gamma = 0.97
+exp_gamma = 0.98125
 lr_verbose = 0
 loss = "focal_loss" # cross_entropy or focal_loss
 optimizer = "adam" # sgd, adam, rmsprop
 
 [model]
-type = "mobilenet_v3_small" # mobilenet_v3_small, mobilenet_v3_large, efficientnet_v2_s, efficientnet_v2_m, efficientnet_v2_l - might not work, resnet50
+type = "efficientnet_v2_m" # mobilenet_v3_small, mobilenet_v3_large, efficientnet_v2_s, efficientnet_v2_m, efficientnet_v2_l - might not work, resnet50
 transfer_learning = 1
 
 [data]
