javítás az előzőekben

--- a/config.ini
+++ b/config.ini
@@ -39,7 +39,7 @@ lr_end = 0.00005
 exp_gamma = 0.98125
 lr_verbose = 0
 loss = "focal_loss" # cross_entropy or focal_loss
-optimizer = "adam" # sgd, adam, rmsprop
+optimizer = "adamw" # sgd, adam, rmsprop, adamw
 
 [model]
 type = "efficientnet_v2_m" # mobilenet_v3_small, mobilenet_v3_large, efficientnet_v2_s, efficientnet_v2_m, efficientnet_v2_l - might not work, resnet50
