--- a/config.ini
+++ b/config.ini
@@ -34,7 +34,7 @@ load_best_at_end = 1
 
 [agent]
 lr_decay = 1 
-lr_decay_type = "warmup_cos" # lin, exp, cos, warmupcosine
+lr_decay_type = "warmup_cos" # lin, exp, cos, warmup_cos
 lr_start = 0.00001
 lr_warmup_end = 0.0005
 lr_end = 0.0002
