--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 services:
   birdclef_app:
-    # image: bodivencel/birdclef_img:latest
-    build: .
+    # image: bodivencel/birdclef_img:latest # ! Can be used once the image is done and is published on Docker Hub (I hope it is available once we submitted our work)
+    build:
+      context: .
+      dockerfile: Dockerfile
     platform: linux/amd64
     container_name: birdclef
     tty: true
@@ -9,6 +11,7 @@ services:
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
       - QT_X11_NO_MITSHM=1
+    runtime: nvidia
     deploy:
       resources:
         reservations:
